Fixes for safari on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,7 @@ html[data-theme="light"] {
 
 a {
   text-decoration: unset;
-  text-decoration: underline dashed;
+  border-bottom: dashed 1px var(--text-color);
   color: var(--text-color);
   transition: color 0.1s ease-out;
 
@@ -34,6 +34,7 @@ a {
 
 a:hover {
   color: var(--accent-color-primary);
+  border-bottom: dashed 1px var(--accent-color-primary);
 }
 
 p {
